# tntcxx-router

./: .gitignore  Base64Unit.test  BufferUnit.test  CMakeCache.txt  CStrUnit.test  CTestTestfile.cmake  CommonUnit.test  DartConfiguration.tcl  ListUnit.test  Makefile  MempoolUnit.test  README.md  RefVectorUnit.test  RingUnit.test  RulesUnit.test  TraitsUnit.test  cmake_install.cmake
examples/: CMakeCache.txt  CMakeLists.txt  Makefile  Schemaless.cpp  Simple.cpp  Sql.cpp  balancer.cpp  cmake_install.cmake  epoll.cpp  mock.cpp  proxy.cpp  tarantool_proxy  tarantool_proxy.cpp  unix_server  unix_server.cpp
src/Client/: Connection.hpp  Connector.hpp  IprotoConstants.hpp  MessageDecoder.hpp  MessageReader.hpp  ProxyConnection.hpp  ProxyConnector.hpp  ProxyEpollNetProvider.hpp  RequestDecoder.hpp  RequestEncoder.hpp  RequestReader.hpp  Stream.hpp  UnixPlainStream.hpp  UnixServer.hpp  UnixStream.hpp
test/: ClientPerfTest.cpp
test/LinkTest/: IncludeHeaders.h
test/Utils/: UserTuple.hpp
